--- a/public/index.css
+++ b/public/index.css
@@ -1,7 +1,7 @@
 .window {
   padding: 6px;
   text-align: center;
-  position: relative;
+  position: absolute;
   width: 300px;
   height: 600px;
   border: 4px solid #999;
@@ -83,4 +83,8 @@ table td:hover {
 .chatMessages {
   height: 97%;
   overflow: auto;
+}
+
+#generateChat {
+  position: relative;
 }
