--- a/public/index.css
+++ b/public/index.css
@@ -1,15 +1,24 @@
 .window {
-  padding: 6px;
   text-align: center;
   position: absolute;
   width: 300px;
   height: 600px;
   border: 4px solid #999;
   float: left;
+  background-color: rgb(179, 250, 244);
 }
 
 .generateWindows {
   position: relative;
+}
+
+.closeWindow {
+  position: relative;
+  float: right;
+  background: red;
+  color: white;
+  top: 0px;
+  right: 0px;
 }
 
 /* Below is the styling of the Hangman window */
@@ -26,6 +35,7 @@ svg {
 }
 
 .enterLetter {
+  width: 100%;
   float: left;
 }
 
@@ -85,6 +95,6 @@ table td:hover {
 /* Below is the styling of the chat window */
 
 .chatMessages {
-  height: 97%;
+  height: 96%;
   overflow: auto;
 }
