--- a/public/index.css
+++ b/public/index.css
@@ -1,19 +1,25 @@
 html {
   overflow: hidden;
+  background-image: url("./img/background.jpg");
 }
 
 .window {
+  color: white;
   text-align: center;
   position: absolute;
   width: 300px;
   height: 600px;
-  border: 4px solid #999;
+  border: 2px solid #999;
   float: left;
-  background-color: rgb(179, 250, 244);
+  background-image: url("./img/windowBackground.jpg");
 }
 
 .generateWindows {
   position: relative;
+  padding: 10px;
+  height: 60px;
+  width: 60px;
+  background-size: contain;
 }
 
 .closeWindow {
@@ -35,7 +41,7 @@ svg {
 .hangmanWord {
   width: 100%;
   float: left;
-  font-size: 2em;
+  font-size: 3em;
 }
 
 .enterLetter {
@@ -77,14 +83,15 @@ svg {
 
 table {
   width: 300px;
-  height: 400px;
+  max-height: 400px;
 }
 
 table td {
   outline: 1px solid black;
   width: 25%;
-  height: 25%;
+  height: 100px;
   text-align: center;
+  color: black;
   font-size: 5em;
   background-color: #eee;
   background-repeat: no-repeat;
@@ -99,6 +106,7 @@ table td:hover {
 
 .chatMessages {
   height: 93%;
+  font-size: 1.2em;
   overflow: auto;
 }
 
