--- a/public/index.css
+++ b/public/index.css
@@ -93,14 +93,15 @@ svg {
 
 table {
   margin: auto;
+  padding: 1px;
   max-width: 300px;
   max-height: 400px;
 }
 
 table td {
   outline: 1px solid black;
-  width: 100px;
-  height: 100px;
+  width: 70px;
+  height: 90px;
   text-align: center;
   color: black;
   font-size: 5em;
@@ -119,14 +120,4 @@ table td:hover {
   height: 93%;
   font-size: 1.2em;
   overflow: auto;
-}
-
-.emojilist {
-  list-style-type: none;
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0;
-  height: 200px;
-  overflow-y: overlay;
-  overflow-x: hidden;
 }
